--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,15 @@
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
+yarn.lock
 
 # testing
 /coverage
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -16,17 +19,62 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.*
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+logs
+*.log
 
 # IDE specific files
-.idea
-.vscode
+.idea/
+.vscode/
 *.swp
 *.swo
+*.swn
+*.bak
+*.tmp
+*.temp
 
 # Firebase
 .firebase/
-firebase-debug.log 
+firebase-debug.log*
+firebase-debug.*.log*
+*-debug.log
+serviceAccountKey.json
+*-service-account.json
+google-services.json
+GoogleService-Info.plist
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local 
